//go:build trading
// +build trading

package test

import (
	"context"
	"testing"
	"time"

	"github.com/google/uuid"
	"github.com/shopspring/decimal"
	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/mock"
	"github.com/stretchr/testify/require"
	"github.com/stretchr/testify/suite"
	"go.uber.org/zap"
	"go.uber.org/zap/zaptest"
	"gorm.io/gorm"

	"github.com/Aidin1998/finalex/internal/trading"
	"github.com/Aidin1998/finalex/internal/trading/settlement"
	"github.com/Aidin1998/finalex/pkg/models"
)

// Mock implementations for dependencies
type MockBookkeeperService struct {
	mock.Mock
}

func (m *MockBookkeeperService) ReserveBalance(ctx context.Context, userID uuid.UUID, asset string, amount decimal.Decimal) error {
	args := m.Called(ctx, userID, asset, amount)
	return args.Error(0)
}

func (m *MockBookkeeperService) ReleaseBalance(ctx context.Context, userID uuid.UUID, asset string, amount decimal.Decimal) error {
	args := m.Called(ctx, userID, asset, amount)
	return args.Error(0)
}

func (m *MockBookkeeperService) GetBalance(ctx context.Context, userID uuid.UUID, asset string) (decimal.Decimal, error) {
	args := m.Called(ctx, userID, asset)
	return args.Get(0).(decimal.Decimal), args.Error(1)
}

func (m *MockBookkeeperService) TransferBalance(ctx context.Context, fromUserID, toUserID uuid.UUID, asset string, amount decimal.Decimal) error {
	args := m.Called(ctx, fromUserID, toUserID, asset, amount)
	return args.Error(0)
}

func (m *MockBookkeeperService) GetAllBalances(ctx context.Context, userID uuid.UUID) (map[string]decimal.Decimal, error) {
	args := m.Called(ctx, userID)
	return args.Get(0).(map[string]decimal.Decimal), args.Error(1)
}

// TradingServiceTestSuite tests trading service functionality
type TradingServiceTestSuite struct {
	suite.Suite
	service        trading.TradingService
	mockBookkeeper *MockBookkeeperService
	mockWSHub      *MockWSHub
	db             *gorm.DB
	logger         *zap.Logger
}

func (suite *TradingServiceTestSuite) SetupTest() {
	suite.logger = zaptest.NewLogger(suite.T())
	suite.mockBookkeeper = new(MockBookkeeperService)
	suite.mockWSHub = new(MockWSHub)

	// Use in-memory SQLite for testing
	suite.db = nil // Bypass DB for testing with mock data

	// Create settlement engine
	settlementEngine := settlement.NewSettlementEngine()

	// Create trading service
	svc, err := trading.NewService(
		suite.logger,
		suite.db,
		suite.mockBookkeeper,
		suite.mockWSHub,
		settlementEngine,
	)
	require.NoError(suite.T(), err)
	suite.service = svc
}

func (suite *TradingServiceTestSuite) TearDownTest() {
	// Close database connection
	if suite.db != nil {
		sqlDB, _ := suite.db.DB()
		if sqlDB != nil {
			sqlDB.Close()
		}
	}
}

func TestTradingServiceSuite(t *testing.T) {
	suite.Run(t, new(TradingServiceTestSuite))
}

// Test Service Lifecycle
func (suite *TradingServiceTestSuite) TestServiceLifecycle() {
	suite.Run("StartService", func() {
		err := suite.service.Start()
		assert.NoError(suite.T(), err)
	})

	suite.Run("StopService", func() {
		err := suite.service.Stop()
		assert.NoError(suite.T(), err)
	})
}

// Test Order Placement
func (suite *TradingServiceTestSuite) TestPlaceOrder() {
	ctx := context.Background()
	userID := uuid.New()

	suite.Run("ValidLimitOrder", func() {
		// Setup mocks
		suite.mockBookkeeper.On("GetBalance", mock.Anything, userID, "USDT").
			Return(decimal.NewFromFloat(1000.0), nil)
		suite.mockBookkeeper.On("ReserveBalance", mock.Anything, userID, "USDT", mock.AnythingOfType("decimal.Decimal")).
			Return(nil)

		order := &models.Order{
			ID:          uuid.New(),
			UserID:      userID,
			Symbol:      "BTCUSDT",
			Side:        "buy",
			Type:        "limit",
			Quantity:    0.001,
			Price:       50000.0,
			TimeInForce: "GTC",
			Status:      "NEW",
			CreatedAt:   time.Now(),
			UpdatedAt:   time.Now(),
		}

		placedOrder, err := suite.service.PlaceOrder(ctx, order)
		assert.NoError(suite.T(), err)
		assert.NotNil(suite.T(), placedOrder)
		assert.Equal(suite.T(), order.Symbol, placedOrder.Symbol)
		assert.Equal(suite.T(), order.Side, placedOrder.Side)
		assert.Equal(suite.T(), order.Type, placedOrder.Type)

		suite.mockBookkeeper.AssertExpectations(suite.T())
	})

	suite.Run("ValidMarketOrder", func() {
		// Setup mocks
		suite.mockBookkeeper.On("GetBalance", mock.Anything, userID, "USDT").
			Return(decimal.NewFromFloat(1000.0), nil)
		suite.mockBookkeeper.On("ReserveBalance", mock.Anything, userID, "USDT", mock.AnythingOfType("decimal.Decimal")).
			Return(nil)

		order := &models.Order{
			ID:          uuid.New(),
			UserID:      userID,
			Symbol:      "BTCUSDT",
			Side:        "buy",
			Type:        "market",
			Quantity:    0.001,
			TimeInForce: "IOC",
			Status:      "NEW",
			CreatedAt:   time.Now(),
			UpdatedAt:   time.Now(),
		}

		placedOrder, err := suite.service.PlaceOrder(ctx, order)
		assert.NoError(suite.T(), err)
		assert.NotNil(suite.T(), placedOrder)

		suite.mockBookkeeper.AssertExpectations(suite.T())
	})

	suite.Run("InsufficientBalance", func() {
		// Setup mocks to return insufficient balance
		suite.mockBookkeeper.On("GetBalance", mock.Anything, userID, "USDT").
			Return(decimal.NewFromFloat(10.0), nil) // Insufficient for the order

		order := &models.Order{
			ID:          uuid.New(),
			UserID:      userID,
			Symbol:      "BTCUSDT",
			Side:        "buy",
			Type:        "limit",
			Quantity:    0.001,
			Price:       50000.0,
			TimeInForce: "GTC",
			Status:      "NEW",
			CreatedAt:   time.Now(),
			UpdatedAt:   time.Now(),
		}

		placedOrder, err := suite.service.PlaceOrder(ctx, order)
		assert.Error(suite.T(), err)
		assert.Nil(suite.T(), placedOrder)
		assert.Contains(suite.T(), err.Error(), "insufficient")

		suite.mockBookkeeper.AssertExpectations(suite.T())
	})

	suite.Run("InvalidOrderType", func() {
		order := &models.Order{
			ID:          uuid.New(),
			UserID:      userID,
			Symbol:      "BTCUSDT",
			Side:        "buy",
			Type:        "invalid_type",
			Quantity:    0.001,
			Price:       50000.0,
			TimeInForce: "GTC",
			Status:      "NEW",
			CreatedAt:   time.Now(),
			UpdatedAt:   time.Now(),
		}

		placedOrder, err := suite.service.PlaceOrder(ctx, order)
		assert.Error(suite.T(), err)
		assert.Nil(suite.T(), placedOrder)
		assert.Contains(suite.T(), err.Error(), "invalid")
	})
}

// Test Order Cancellation
func (suite *TradingServiceTestSuite) TestCancelOrder() {
	ctx := context.Background()

	suite.Run("ValidCancellation", func() {
		orderID := uuid.New().String()

		// Setup mocks
		suite.mockBookkeeper.On("ReleaseBalance", mock.Anything, mock.AnythingOfType("uuid.UUID"), mock.AnythingOfType("string"), mock.AnythingOfType("decimal.Decimal")).
			Return(nil)

		err := suite.service.CancelOrder(ctx, orderID)
		// Note: This might fail if no order exists, but we're testing the interface
		if err != nil {
			assert.Contains(suite.T(), err.Error(), "not found")
		}
	})

	suite.Run("InvalidOrderID", func() {
		err := suite.service.CancelOrder(ctx, "invalid-uuid")
		assert.Error(suite.T(), err)
	})
}

// Test Order Retrieval
func (suite *TradingServiceTestSuite) TestGetOrder() {
	suite.Run("GetNonExistentOrder", func() {
		orderID := uuid.New().String()
		order, err := suite.service.GetOrder(orderID)
		assert.Error(suite.T(), err)
		assert.Nil(suite.T(), order)
		assert.Contains(suite.T(), err.Error(), "not found")
	})

	suite.Run("InvalidOrderID", func() {
		order, err := suite.service.GetOrder("invalid-uuid")
		assert.Error(suite.T(), err)
		assert.Nil(suite.T(), order)
	})
}

// Test Order Listing
func (suite *TradingServiceTestSuite) TestGetOrders() {
	userID := uuid.New().String()

	suite.Run("GetOrdersWithFilters", func() {
		orders, total, err := suite.service.GetOrders(userID, "BTCUSDT", "open", "10", "0")
		// Should not error even if no orders exist
		assert.NoError(suite.T(), err)
		assert.NotNil(suite.T(), orders)
		assert.GreaterOrEqual(suite.T(), total, int64(0))
	})

	suite.Run("GetOrdersWithoutFilters", func() {
		orders, total, err := suite.service.GetOrders(userID, "", "", "10", "0")
		assert.NoError(suite.T(), err)
		assert.NotNil(suite.T(), orders)
		assert.GreaterOrEqual(suite.T(), total, int64(0))
	})

	suite.Run("InvalidPagination", func() {
		orders, total, err := suite.service.GetOrders(userID, "", "", "invalid", "invalid")
		// Service should handle invalid pagination gracefully
		assert.NoError(suite.T(), err)
		assert.NotNil(suite.T(), orders)
		assert.GreaterOrEqual(suite.T(), total, int64(0))
	})
}

// Test Order Book Operations
func (suite *TradingServiceTestSuite) TestGetOrderBook() {
	suite.Run("ValidSymbol", func() {
		orderBook, err := suite.service.GetOrderBook("BTCUSDT", 10)
		// Should not error even if no orders in book
		assert.NoError(suite.T(), err)
		assert.NotNil(suite.T(), orderBook)
		assert.Equal(suite.T(), "BTCUSDT", orderBook.Symbol)
	})

	suite.Run("InvalidDepth", func() {
		orderBook, err := suite.service.GetOrderBook("BTCUSDT", -1)
		assert.Error(suite.T(), err)
		assert.Nil(suite.T(), orderBook)
	})

	suite.Run("EmptySymbol", func() {
		orderBook, err := suite.service.GetOrderBook("", 10)
		assert.Error(suite.T(), err)
		assert.Nil(suite.T(), orderBook)
	})
}

// Test Binary Order Book
func (suite *TradingServiceTestSuite) TestGetOrderBookBinary() {
	suite.Run("ValidRequest", func() {
		data, err := suite.service.GetOrderBookBinary("BTCUSDT", 10)
		assert.NoError(suite.T(), err)
		assert.NotNil(suite.T(), data)
	})

	suite.Run("InvalidSymbol", func() {
		data, err := suite.service.GetOrderBookBinary("", 10)
		assert.Error(suite.T(), err)
		assert.Nil(suite.T(), data)
	})
}

// Test Trading Pairs
func (suite *TradingServiceTestSuite) TestTradingPairs() {
	suite.Run("GetTradingPairs", func() {
		pairs, err := suite.service.GetTradingPairs()
		// Currently returns not implemented error
		assert.Error(suite.T(), err)
		assert.Contains(suite.T(), err.Error(), "not implemented")
		assert.Nil(suite.T(), pairs)
	})

	suite.Run("GetTradingPair", func() {
		pair, err := suite.service.GetTradingPair("BTCUSDT")
		// Currently returns not implemented error
		assert.Error(suite.T(), err)
		assert.Contains(suite.T(), err.Error(), "not implemented")
		assert.Nil(suite.T(), pair)
	})

	suite.Run("CreateTradingPair", func() {
		pair := &models.TradingPair{
			Symbol:     "ETHUSDT",
			BaseAsset:  "ETH",
			QuoteAsset: "USDT",
			Status:     "active",
		}

		createdPair, err := suite.service.CreateTradingPair(pair)
		// Currently returns not implemented error
		assert.Error(suite.T(), err)
		assert.Contains(suite.T(), err.Error(), "not implemented")
		assert.Nil(suite.T(), createdPair)
	})

	suite.Run("UpdateTradingPair", func() {
		pair := &models.TradingPair{
			Symbol:     "ETHUSDT",
			BaseAsset:  "ETH",
			QuoteAsset: "USDT",
			Status:     "inactive",
		}

		updatedPair, err := suite.service.UpdateTradingPair(pair)
		// Currently returns not implemented error
		assert.Error(suite.T(), err)
		assert.Contains(suite.T(), err.Error(), "not implemented")
		assert.Nil(suite.T(), updatedPair)
	})
}

// Test List Orders with Filter
func (suite *TradingServiceTestSuite) TestListOrders() {
	userID := uuid.New().String()

	suite.Run("WithFilter", func() {
		filter := &models.OrderFilter{
			Symbol: "BTCUSDT",
			Status: "open",
		}

		orders, err := suite.service.ListOrders(userID, filter)
		assert.NoError(suite.T(), err)
		assert.NotNil(suite.T(), orders)
	})

	suite.Run("WithoutFilter", func() {
		orders, err := suite.service.ListOrders(userID, nil)
		assert.NoError(suite.T(), err)
		assert.NotNil(suite.T(), orders)
	})
}

// Benchmarks for performance testing
func BenchmarkPlaceOrder(b *testing.B) {
	logger := zaptest.NewLogger(b)
	mockBookkeeper := new(MockBookkeeperService)
	mockWSHub := new(MockWSHub)
	db := setupTestDB(b)
	defer func() {
		sqlDB, _ := db.DB()
		if sqlDB != nil {
			sqlDB.Close()
		}
	}()

	settlementEngine := settlement.NewSettlementEngine()
	service, err := trading.NewService(logger, db, mockBookkeeper, mockWSHub, settlementEngine)
	require.NoError(b, err)

	userID := uuid.New()
	mockBookkeeper.On("GetBalance", mock.Anything, userID, "USDT").
		Return(decimal.NewFromFloat(1000000.0), nil)
	mockBookkeeper.On("ReserveBalance", mock.Anything, userID, "USDT", mock.AnythingOfType("decimal.Decimal")).
		Return(nil)

	b.ResetTimer()
	b.RunParallel(func(pb *testing.PB) {
		for pb.Next() {
			order := &models.Order{
				ID:          uuid.New(),
				UserID:      userID,
				Symbol:      "BTCUSDT",
				Side:        "buy",
				Type:        "limit",
				Quantity:    0.001,
				Price:       50000.0,
				TimeInForce: "GTC",
				Status:      "NEW",
				CreatedAt:   time.Now(),
				UpdatedAt:   time.Now(),
			}

			_, _ = service.PlaceOrder(context.Background(), order)
		}
	})
}

func BenchmarkGetOrderBook(b *testing.B) {
	logger := zaptest.NewLogger(b)
	mockBookkeeper := new(MockBookkeeperService)
	mockWSHub := new(MockWSHub)
	db := setupTestDB(b)
	defer func() {
		sqlDB, _ := db.DB()
		if sqlDB != nil {
			sqlDB.Close()
		}
	}()

	settlementEngine := settlement.NewSettlementEngine()
	service, err := trading.NewService(logger, db, mockBookkeeper, mockWSHub, settlementEngine)
	require.NoError(b, err)

	b.ResetTimer()
	b.RunParallel(func(pb *testing.PB) {
		for pb.Next() {
			_, _ = service.GetOrderBook("BTCUSDT", 100)
		}
	})
}

// Helper function to create test database
func setupTestDB(t testing.TB) *gorm.DB {
	// For testing, we'll use an in-memory SQLite database
	// In a real test environment, you might want to use a test-specific PostgreSQL database	return createInMemoryDB(t)
}
